Revision history for {{$dist->name}}

{{$NEXT}}
  - Fixup the prereqs some

0.23      2019-05-21
  - Fixed some documentation errors (Mohammad S Anwar)
  - Added unicode support (Kivanc Yazan, GH PR#10)
  - Bump Perl prereq to 5.8 now that we support unicode
  - Don't inherit from Exporter (Olivier Mengué, GH PR#9)
  - Bump Exporter prereq to 5.57

0.22      2019-04-24
  - Zero-code-change release encompassing everything from 0.21
  - Resolves RT#120425 . in @INC should no longer be an issue

0.21      2019-04-19 (TRIAL)
  - Removed the POD spelling test from /t as it's now in /xt
  - Forego usage of inc::Module::Install for EU::MM
  - List out all prereqs individually; provide cpanfile
  - Use dzil to build the dist
  - Convert the README to markdown
  - Add a LICENSE file
  - Clean up the Changes log

0.20  2014-10-07
  - Add a sorted list of your most commonly misspelled words to
    the end of all_pod_files_spelling_ok to aid stopword list creation
    and bulk correction. (Kent Fredric)

0.19  2013-05-05
  - for more consistent results avoid using the user's local aspell
    dictionary [rt.cpan.org #84869] (Karen Etheridge)

0.18  2013-04-26
  - Work around Pod::Spell limitations (David Golden)
  - Improve case handling (David Golden)
  - Improve test failure reporting (Karen Etheridge)
  - Include more useful info in Test-Spelling's own test
    suite (Shawn Moore)

0.17  2012-01-27
  - Use IPC::Run3 instead of IPC::Open3
      Quoth IPC::Open3:
          If you try to read from the child's stdout writer
          and their stderr writer, you'll have problems with
          blocking ... This is very dangerous, as you may
          block forever.
      Also the code is nicely shorter. (Randy Stauner)

0.16  2012-12-20
  - Allow use of a custom POD parser rather than Pod::Spell
    using set_pod_parser (Thomas Sibley)

0.15  2011-08-22
  - Begin adding actual tests
    (Hilariously, adding the suggested t/pod-spell.t to this